# pretty_flexible_env_logger

./: .pre-commit-config.yaml  Cargo.toml  Justfile  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yaml  publish.yaml
examples/: try_with_init.rs
src/: lib.rs
