[package]
name = "pretty_flexible_env_logger"
version = "0.1.0"
description = "A visually pretty yet a bit configurable env_logger"
edition = "2021"
keywords = ["logger", "logging", "log"]
license = "CC0-1.0"
license-file = "LICENSE"
categories = ["development-tools::debugging"]
authors = ["Andrzej Lichnerowicz <andrzej@lichnerowicz.pl>"]
repository = "https://git.sr.ht/~unjello/pretty_flexible_env_logger"
readme = "README.md"

include = [
  "Cargo.toml",
  "LICENSE",
  "src/**/*"
]

[dependencies]
pretty_env_logger = "0.4"
log = "0.4"